--- a/newer.ipynb
+++ b/newer.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 说明\n",
+    "pytorch初步熟悉，参考https://github.com/fastai/fastai_docs/tree/master/dev_nb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pathlib使用"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -8,7 +23,6 @@
    },
    "outputs": [],
    "source": [
-    "# pathlib使用\n",
     "from pathlib import Path\n",
     "\n",
     "# 打印路径下所有文件\n",
@@ -23,12 +37,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 下载数据"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 下载数据\n",
     "import requests\n",
     "url='http://deeplearning.net/data/mnist/'\n",
     "filename='mnist.pkl.gz'\n",
@@ -39,12 +59,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 读取数据"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 读取数据\n",
     "%matplotlib inline\n",
     "from matplotlib import pyplot\n",
     "import pickle, gzip\n",
